overflow fixed.

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -18,6 +18,7 @@ html, body, #page-canvas {
         height: 1080px;
         position: absolute;
         transform-origin: 0 0;
+        overflow: hidden;;
     }
     div, img {
         position: absolute;
@@ -119,9 +120,11 @@ html, body, #page-canvas {
     }
 
     .storybook-page {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
     }
+
+
 
 
     .faded-item {
